@@ -23,6 +23,7 @@ test_programs = \
   test_heterogeneous_queue   \
   test_http_connection       \
   test_ip_filter             \
+  test_ip_voter              \
   test_dht                   \
   test_lsd                   \
   test_metadata_extension    \
@@ -164,6 +165,7 @@ test_hasher_SOURCES = test_hasher.cpp
 test_heterogeneous_queue_SOURCES = test_heterogeneous_queue.cpp
 test_http_connection_SOURCES = test_http_connection.cpp
 test_ip_filter_SOURCES = test_ip_filter.cpp
+test_ip_voter_SOURCES = test_ip_voter.cpp
 test_lsd_SOURCES = test_lsd.cpp
 test_metadata_extension_SOURCES = test_metadata_extension.cpp
 test_peer_priority_SOURCES = test_peer_priority.cpp
